--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
